--- a/project_3/templates/index.html
+++ b/project_3/templates/index.html
@@ -44,6 +44,7 @@
                         alt="random_forest_classifier_icon" width="20px"> Random Forest Classifier </a>
                   </div>
                 </div>
+                <br>
                 <!-- Logistic Regression Prediction -->
                 <div class="tab-content" id="v-pills-tabContent">
                   <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
@@ -71,8 +72,12 @@
               </div>
               <div class="col-lg-4 ml-auto">
                 <h3 class="mb-4">About Dataset  .</h3>
-                <p>This dataset contains about 10 years of daily weather observations from many locations across Australia.
-                  <br>RainTomorrow is the target variable to predict. It means did it rain the next day, Yes or No? This column is Yes if the rain for that day was 1mm or more.</p>
+                <p>Cardiovascular diseases (CVDs) are the number 1 cause of death globally, taking an estimated 17.9 million lives each year, which accounts for 31% of all deaths worlwide.
+                  Heart failure is a common event caused by CVDs and this dataset contains 12 features that can be used to predict mortality by heart failure.
+                  
+                  <br>Most cardiovascular diseases can be prevented by addressing behavioural risk factors such as tobacco use, unhealthy diet and obesity, physical inactivity and harmful use of alcohol using population-wide strategies.
+                  
+                  People with cardiovascular disease or who are at high cardiovascular risk (due to the presence of one or more risk factors such as hypertension, diabetes, hyperlipidaemia or already established disease) need early detection and management wherein a machine learning model can be of great help.</p>
                 <p><a href="https://www.kaggle.com/datasets/jsphyg/weather-dataset-rattle-package" target="blank">Go to Site</a></p>
                   <br>
                 <h3 class="mb-4">Nama Kelompok:</h3>
